test_regress/t/t_randsequence_recurse.out
%Error-UNSUPPORTED: t/t_randsequence_recurse.v:21:5: Unsupported: randsequence
   21 |     randsequence(main)
      |     ^~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
